crates/regent/tests/fail/void-enum.rs
fn main() {
    #[regent::bitwise]
    enum Void {}
}
